// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loader Animated Ping > displays content block with padding when not loading 1`] = `
<body>
  <div>
    <div
      class="flex justify-center rounded-3xl bg-grey-400 text-white h-6 w-6"
    />
    
    <!--&lt;LoadingAnimationModal&gt;-->
  </div>
</body>
`;

exports[`Loader Animated Ping > displays content block without padding when not loading 1`] = `
<body>
  <div>
    <div
      class="flex justify-center rounded-3xl bg-grey-400 text-white h-5 w-5"
    />
    
    <!--&lt;LoadingAnimationModal&gt;-->
  </div>
</body>
`;

exports[`Loader Animated Ping > displays loading indicator with padding 1`] = `
<body>
  <div>
    <span
      class="relative flex justify-center rounded-3xl text-white h-6 w-6"
    >
      <span
        class="absolute inline-flex h-full w-full animate-ping rounded-full bg-orange-400 opacity-75"
      />
       
      <span
        class="relative inline-flex justify-center rounded-full bg-orange-400 text-center text-sm h-6 w-6 p-[2.5px]"
      />
    </span>
    
    <!--&lt;LoadingAnimationModal&gt;-->
  </div>
</body>
`;

exports[`Loader Animated Ping > displays loading indicator without padding 1`] = `
<body>
  <div>
    <span
      class="relative flex justify-center rounded-3xl text-white h-5 w-5"
    >
      <span
        class="absolute inline-flex h-full w-full animate-ping rounded-full bg-orange-400 opacity-75"
      />
       
      <span
        class="relative inline-flex justify-center rounded-full bg-orange-400 text-center text-sm h-5 w-5"
      />
    </span>
    
    <!--&lt;LoadingAnimationModal&gt;-->
  </div>
</body>
`;

exports[`Loader Animated Ping > renders loader with two child div elements 1`] = `
<body>
  <div>
    <div
      class="marlin-loader s-pih5pjlcIrgJ"
    >
      <div
        class="lds-ripple s-pih5pjlcIrgJ"
      >
        <div
          class="s-pih5pjlcIrgJ"
        />
         
        <div
          class="s-pih5pjlcIrgJ"
        />
      </div>
    </div>
    <!--&lt;LoadingAnimatedPing&gt;-->
  </div>
</body>
`;
